# my-bindicator

./: .gitignore  Cargo.toml  Cargoold.toml  README.md  Trunk.toml  index.html
docs/: README.md  bindicator-3448fe19bd4e121f.js  bindicator-3448fe19bd4e121f_bg.wasm  bindicator-350efbc0cb97af6b.js  bindicator-350efbc0cb97af6b_bg.wasm  bindicator-3becb5ef36e9d985.js  bindicator-3becb5ef36e9d985_bg.wasm  bindicator-3c8b6d9eeb14366f_bg.wasm  bindicator-3d95ce84779b626f.js  bindicator-3d95ce84779b626f_bg.wasm  bindicator-4092cb48b736d502.js  bindicator-4092cb48b736d502_bg.wasm  bindicator-48edce1ce0d77b67.js  bindicator-48edce1ce0d77b67_bg.wasm  bindicator-4db1badac7aa34af.js  bindicator-4db1badac7aa34af_bg.wasm  bindicator-58bf6f2a2c130da6_bg.wasm  bindicator-5e852f3b5e495967_bg.wasm  bindicator-6c461c525f918e6f.js  bindicator-6e968c9fce82ae52.js  bindicator-6e968c9fce82ae52_bg.wasm  bindicator-71917c4a24ad2de2.js  bindicator-71917c4a24ad2de2_bg.wasm  bindicator-72f9c3a310022c94.js  bindicator-72f9c3a310022c94_bg.wasm  bindicator-7839ccc870a239bb.js  bindicator-7839ccc870a239bb_bg.wasm  bindicator-7c198ba691dae590.js  bindicator-7c198ba691dae590_bg.wasm  bindicator-83907e76f6b7abd5.js  bindicator-83907e76f6b7abd5_bg.wasm  bindicator-8c47d947d434b659_bg.wasm  bindicator-9c13eaa87af848e2.js  bindicator-9c13eaa87af848e2_bg.wasm  bindicator-d59faabda7600875.js  bindicator-d59faabda7600875_bg.wasm  bindicator-e65ceb84457dcba7.js  bindicator-e65ceb84457dcba7_bg.wasm  bindicator-fc2dea21ff399657_bg.wasm  index.html  (+8 more)
src/: main.rs  mainold.rs  utils.rs
src/components/: bin.rs  (+7 more)
(+11 files in other folders)
