[package]
name = "bindicator"
version = "0.2.0"
edition = "2021"

[dependencies]
# Existing dependencies (kept)
charming = { version = "0.6.0", features = ["wasm"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.3"
gloo-console = "0.3.0"
futures = "0.3.31"

# === UPDATED: Web-Sys for Theme Switching ===
web-sys = { version = "0.3.77", features = ["HtmlFormElement", "Window", "Document", "HtmlElement", "MediaQueryList"] }

# Merged dependencies (combined duplicates with latest versions and all features)
chrono = { version = "0.4.41", features = ["wasmbind"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.140"
gloo-net = { version = "0.6.0", features = ["http"] }

# New dependencies for weather integration
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] } # ADDED 'features = ["futures"]'
roxmltree = "0.19"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
yew-agent = "0.3.0"
